--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
             <div class="menu h-xs">
                 <a href="#home">
                     <div class="menu-item active">
-                        Home
+                        Beranda
                     </div>
                 </a>
                 <a href="#about">
                     <div class="menu-item">
-                        Our Story
+                        Cerita Kita
                     </div>
                 </a>
                 <a href="#food-menu-section">
                     <div class="menu-item">
-                        Menu
+                        Produk Kami
                     </div>
                 </a>
                 <a href="#testimonial">
                     <div class="menu-item">
-                        Testimonials
+                        Testimoni
                     </div>
                 </a>
             </div>
@@ -91,17 +91,17 @@
                 <div class="col-6 col-xs-12">
                     <div class="slogan">
                         <h1 class="left-to-right play-on-scroll">
-                            Have A Nice day
+                            Hari yang Menyenangkan!
                         </h1>
                         <p class="left-to-right play-on-scroll delay-2">
-                            Serrie Tea is a brand that serves Thai Tea drinks for all Indonesian people. 
-                            This fresh cold drink made from a mixture of black tea (black tea) and sweetened 
-                            condensed milk from Thailand is currently very popular among Indonesian people. 
-                            Serrie Tea is here with the aim of bringing happiness to everyone who drinks it through its distinctive taste.
+                            Serrie Tea adalah brand yang menyajikan minuman Thai Tea untuk seluruh masyarakat Indonesia.
+                            Minuman dingin segar ini terbuat dari campuran teh hitam (black tea) dan manis
+                            Susu kental dari Thailand saat ini sangat populer di kalangan masyarakat Indonesia.
+                            Serrie Tea hadir dengan tujuan untuk membawa kebahagiaan bagi setiap orang yang meminumnya melalui cita rasanya yang khas.
                         </p>
                         <div class="left-to-right play-on-scroll delay-4">
                             <button>
-                                Order now
+                                Pesan Sekarang
                             </button>
                         </div>
                     </div>
@@ -121,20 +121,20 @@
                 <div class="col-5 col-xs-12 align-items-center">
                     <div class="about-slogan right-to-left play-on-scroll">
                         <h3>
-                            <span class="primary-color">We</span> create <span class="primary-color">delicious</span>
-                            memories for <span class="primary-color">you</span>
+                            <span class="primary-color">Kita</span> Menciptakan <span class="primary-color">Kenangan</span>
+                            indah untuk <span class="primary-color">kamu</span>
                         </h3>
                         <p>
-                            Ms. Anindia studies in Malang City and has always wanted to have her own business, 
-                            namely the contemporary beverage business, which is similar to the one in Malang City. 
-                            He is also looking for references regarding the most suitable beverage business to open in Pronojiwo, 
-                            Lumajang Regency. And in the end, Ms. 
-                            Anindia was determined to decide and was sure that she was able to open a beverage business. 
-                            Now his efforts in opening or realizing his business have finally not been in vain, 
-                            he has succeeded in having a serrie tea beverage business (thai tea) and he can even open up job 
-                            opportunities for people who need work.
+                            Ibu Anindia kuliah di Kota Malang dan selalu ingin memiliki usaha sendiri,
+                             yaitu bisnis minuman kekinian yang mirip dengan yang ada di Kota Malang.
+                             Ia juga sedang mencari referensi mengenai bisnis minuman yang paling cocok untuk dibuka di Pronojiwo,
+                             Kabupaten Lumajang. Dan pada akhirnya, Ny.
+                             Anindia bertekad untuk memutuskan dan yakin bisa membuka usaha minuman.
+                             Kini usahanya dalam membuka atau merealisasikan usahanya akhirnya tidak sia-sia,
+                             dia telah berhasil memiliki bisnis minuman teh serrie (thai tea) dan dia bahkan bisa membuka pekerjaan
+                             kesempatan bagi orang-orang yang membutuhkan pekerjaan.
                         </p>
-                        <b>— Anindia Putri, CEO and Founder</b>
+                        <b>— Anindia Putri, Wirausaha</b>
                     </div>
                 </div>
             </div>
@@ -147,21 +147,21 @@
         <div class="container">
             <div class="food-menu">
                 <h1>
-                    What will <span class="primary-color">you</span> drink today?
+                    Apa yang akan <span class="primary-color">kamu</span> minum hari ini?
                 </h1>
                 <p>
-                    Feel the freshness of drinking Thai Tea from Serie Tea and share your drinking moment with your friends.
+                    Rasakan kesegaran minum Thai Tea dari Serie Tea dan bagikan momen minummu dengan teman-temanmu.
 
                 </p>
                 <div class="food-category">
                     <div class="zoom play-on-scroll">
                         <button class="active" data-food-type="all">
-                            All drink
+                            Semua Minuman
                         </button>
                     </div>
                     <div class="zoom play-on-scroll delay-2">
                         <button data-food-type="salad">
-                            Chocolatte
+                            Coklat
                         </button>
                     </div>
                     <div class="zoom play-on-scroll delay-4">
@@ -191,10 +191,10 @@
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Lorem ipsum
+                                        Coklat
                                     </h3>
                                     <span>
-                                        120$
+                                        Rp.120.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -213,10 +213,10 @@
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Lorem ipsum
+                                        Coklat
                                     </h3>
                                     <span>
-                                        120$
+                                        Rp.120.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -236,10 +236,10 @@
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Lorem ipsum
+                                        Matcha
                                     </h3>
                                     <span>
-                                        120$
+                                        Rp.120.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -258,10 +258,10 @@
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Lorem ipsum
+                                        Matcha
                                     </h3>
                                     <span>
-                                        120$
+                                        Rp.120.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -280,10 +280,10 @@
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Lorem ipsum
+                                        Red Velvet
                                     </h3>
                                     <span>
-                                        120$
+                                        Rp.120.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -302,10 +302,10 @@
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Lorem ipsum
+                                        Red Velvet
                                     </h3>
                                     <span>
-                                        120$
+                                        Rp.120.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -324,10 +324,10 @@
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Lorem ipsum
+                                        Matcha
                                     </h3>
                                     <span>
-                                        120$
+                                        Rp.120.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -346,10 +346,10 @@
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Lorem ipsum
+                                        Matcha
                                     </h3>
                                     <span>
-                                        120$
+                                        Rp.120.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -371,9 +371,9 @@
                     <div class="review-wrap zoom play-on-scroll delay-2">
                         <div class="review-content">
                             <p>
-                                The drink is fresh & taste natural compare with others, 
-                                and never hear than the bubble tea can be many difference flavor, 
-                                also u can choose your flavor toppings u like. The best i like is the smoothie series & the yogurt drink.
+                                Minumannya segar & rasanya alami dibandingkan dengan yang lain,
+                                dan tidak pernah mendengar dari teh gelembung bisa banyak perbedaan rasa,
+                                Anda juga dapat memilih topping rasa yang Anda suka. Yang terbaik yang saya suka adalah seri smoothie & minuman yogurt.
                             </p>
                             <div class="review-img bg-img"
                                 style="background-image: url(assets/close-up-portrait-cute-young-woman-holding-textbook-colored-pencils-posing-studio-isolated-pink_176532-9674.jpg);">
@@ -398,8 +398,8 @@
                         <div class="review-wrap active">
                             <div class="review-content">
                                 <p>
-                                    I like the variety as it is not limited to bubble tea only. 
-                                    Tastes refreshing. Suitable for our hot weather. Not too pricey. Clean and convenient.
+                                    Saya suka variasinya karena tidak terbatas pada bubble tea saja.
+                                    Rasanya menyegarkan. Cocok untuk cuaca kita yang panas. Tidak terlalu mahal. Bersih dan nyaman.
                                 </p>
                                 <div class="review-img bg-img"
                                     style="background-image: url(assets/michael-dam-mEZ3PoFGs_k-unsplash.jpg);">
@@ -424,9 +424,9 @@
                     <div class="review-wrap zoom play-on-scroll delay-4">
                         <div class="review-content">
                             <p>
-                                The tastes are awesome, the brand is so famous in Singapore and Malaysia especially. 
-                                Basically in Malaysia, bubble tea only bought by Chinese community, 
-                                but nowadays the Malays and Indians are starting to like bubble tea as well.
+                                Rasanya luar biasa, merek ini sangat terkenal di Singapura dan Malaysia khususnya.
+                                 Pada dasarnya di Malaysia, bubble tea hanya dibeli oleh masyarakat Tionghoa,
+                                 tapi sekarang orang melayu dan india juga mulai menyukai bubble tea.
                             </p>
                             <div class="review-img bg-img"
                                 style="background-image: url(assets/portrait-happy-young-man_171337-21716.jpg);">
@@ -462,22 +462,22 @@
                     <p>Pronojiwo Kabupaten Lumajang.</p>
                     <br>
                     <p>Email: example@mail.com</p>
-                    <p>Phone: +00 123 456 789</p>
+                    <p>Nomor Telepom: +00 123 456 789</p>
                     <p>Website: Serrietea.com</p>
                 </div>
                 <div class="col-2 col-xs-12">
                     <h1>
-                        About us
+                        Tentang Kita
                     </h1>
                     <br>
                     <p>
                         <a href="#">
-                            Home
+                            Beranda
                         </a>
                     </p>
                     <p>
                         <a href="#">
-                            Our Story
+                            Cerita Kita
                         </a>
                     </p>
                     <p>
@@ -487,7 +487,7 @@
                     </p>
                     <p>
                         <a href="#">
-                            Testimonials
+                            Testimoni
                         </a>
                     </p>
                 </div>
@@ -496,7 +496,7 @@
                         Subscribe & media
                     </h1>
                     <br>
-                    <p>Join with us then you must have get a discount and get promo from us to you , enjoy and happy to order.</p>
+                    <p>Bergabunglah bersama kami maka Anda pasti sudah mendapatkan diskon dan dapatkan promo dari kami untuk Anda, selamat menikmati dan selamat memesan.</p>
                     <div class="input-group">
                         <input type="text" placeholder="Enter your email">
                         <button>
