--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                              dia telah berhasil memiliki bisnis minuman teh serrie (thai tea) dan dia bahkan bisa membuka pekerjaan
                              kesempatan bagi orang-orang yang membutuhkan pekerjaan.
                         </p>
-                        <b>— Anindia Putri, Wirausaha</b>
+                        <b>— Anindia Citra, Wirausaha</b>
                     </div>
                 </div>
             </div>
@@ -161,24 +161,24 @@
                     </div>
                     <div class="zoom play-on-scroll delay-2">
                         <button data-food-type="salad">
-                            Coklat
+                            Kopi
                         </button>
                     </div>
                     <div class="zoom play-on-scroll delay-4">
                         <button data-food-type="lorem">
-                            Red Velvet
+                            Non Kopi
                         </button>
                     </div>
                     <div class="zoom play-on-scroll delay-6">
                         <button data-food-type="ipsum">
-                            Matcha
+                            Tea
                         </button>
                     </div>
-                    <div class="zoom play-on-scroll delay-8">
+                    <!-- <div class="zoom play-on-scroll delay-8">
                         <button data-food-type="dolor">
                             Strawberry
                         </button>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="food-item-wrap all">
@@ -186,15 +186,15 @@
                         <div class="item-wrap bottom-up play-on-scroll">
                             <div class="item-img">
                                 <div class="img-holder bg-img"
-                                    style="background-image: url(assets/1.png);"></div>
+                                    style="background-image: url('assets/(Coffe) Thaitea Coffee 15k.jpg');"></div>
                             </div>
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Coklat
+                                        Thaitea Coffee
                                     </h3>
                                     <span>
-                                        Rp.120.000
+                                        Rp15.0000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -204,19 +204,86 @@
                         </div>
                     </div>
 
-                    <div class="food-item lorem-type">
+                    <div class="food-item salad-type">
                         <div class="item-wrap bottom-up play-on-scroll">
                             <div class="item-img">
                                 <div class="img-holder bg-img"
-                                    style="background-image: url('assets/2.png');"></div>
+                                    style="background-image: url('assets/(Coffee) Cappucino Milk 10k.jpg');"></div>
                             </div>
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Coklat
+                                        Cappucino Milk
                                     </h3>
                                     <span>
-                                        Rp.120.000
+                                        Rp10.000
+                                    </span>
+                                </div>
+                                <div class="cart-btn">
+                                    <i class='bx bx-cart-alt'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="food-item salad-type">
+                        <div class="item-wrap bottom-up play-on-scroll">
+                            <div class="item-img">
+                                <div class="img-holder bg-img"
+                                    style="background-image: url('assets/(Coffee) Coffe Milk 10k.jpg');">
+                                </div>
+                            </div>
+                            <div class="item-info">
+                                <div>
+                                    <h3>
+                                        Coffe Milk
+                                    </h3>
+                                    <span>
+                                        Rp10.000
+                                    </span>
+                                </div>
+                                <div class="cart-btn">
+                                    <i class='bx bx-cart-alt'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="food-item lorem-type">
+                        <div class="item-wrap bottom-up play-on-scroll">
+                            <div class="item-img">
+                                <div class="img-holder bg-img"
+                                    style="background-image: url('assets/(Non Coffee) Strawberry Milk 10k.jpg');"></div>
+                            </div>
+                            <div class="item-info">
+                                <div>
+                                    <h3>
+                                        Strawberry Milk
+                                    </h3>
+                                    <span>
+                                        Rp10.000
+                                    </span>
+                                </div>
+                                <div class="cart-btn">
+                                    <i class='bx bx-cart-alt'></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="food-item lorem-type">
+                        <div class="item-wrap bottom-up play-on-scroll">
+                            <div class="item-img">
+                                <div class="img-holder bg-img"
+                                    style="background-image: url('assets/(Non Coffee) Taro Milk 10k.jpg');"></div>
+                            </div>
+                            <div class="item-info">
+                                <div>
+                                    <h3>
+                                        Taro Milk
+                                    </h3>
+                                    <span>
+                                        Rp10.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -230,16 +297,15 @@
                         <div class="item-wrap bottom-up play-on-scroll">
                             <div class="item-img">
                                 <div class="img-holder bg-img"
-                                    style="background-image: url('assets/3.png');">
-                                </div>
+                                    style="background-image: url('assets/(Tea) Greentea Milk 10k.jpg');"></div>
                             </div>
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Matcha
+                                        Greentea Milk
                                     </h3>
                                     <span>
-                                        Rp.120.000
+                                        Rp10.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -249,19 +315,19 @@
                         </div>
                     </div>
 
-                    <div class="food-item lorem-type">
+                    <div class="food-item ipsum-type">
                         <div class="item-wrap bottom-up play-on-scroll">
                             <div class="item-img">
                                 <div class="img-holder bg-img"
-                                    style="background-image: url('assets/4.png');"></div>
+                                    style="background-image: url('assets/(Tea) Greentea Original 5k.jpg');"></div>
                             </div>
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Matcha
+                                        Greentea Original
                                     </h3>
                                     <span>
-                                        Rp.120.000
+                                        Rp5.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -271,19 +337,19 @@
                         </div>
                     </div>
 
-                    <div class="food-item dolor-type">
+                    <div class="food-item ipsum-type">
                         <div class="item-wrap bottom-up play-on-scroll">
                             <div class="item-img">
                                 <div class="img-holder bg-img"
-                                    style="background-image: url('assets/5.png');"></div>
+                                    style="background-image: url('assets/(Tea) Thaitea Milo 10k.jpg');"></div>
                             </div>
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Red Velvet
+                                        Greentea Original
                                     </h3>
                                     <span>
-                                        Rp.120.000
+                                        Rp10.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -293,19 +359,19 @@
                         </div>
                     </div>
 
-                    <div class="food-item salad-type">
+                    <div class="food-item ipsum-type">
                         <div class="item-wrap bottom-up play-on-scroll">
                             <div class="item-img">
                                 <div class="img-holder bg-img"
-                                    style="background-image: url('assets/6.png');"></div>
+                                    style="background-image: url('assets/(Tea) Thaitea Original 8k.jpg');"></div>
                             </div>
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Red Velvet
+                                        Greentea Original
                                     </h3>
                                     <span>
-                                        Rp.120.000
+                                        Rp8.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -315,41 +381,19 @@
                         </div>
                     </div>
 
-                    <div class="food-item lorem-type">
+                    <div class="food-item ipsum-type">
                         <div class="item-wrap bottom-up play-on-scroll">
                             <div class="item-img">
                                 <div class="img-holder bg-img"
-                                    style="background-image: url('assets/1.png');"></div>
+                                    style="background-image: url('assets/(Tea) Original Tea 5k.jpg');"></div>
                             </div>
                             <div class="item-info">
                                 <div>
                                     <h3>
-                                        Matcha
+                                        Original Tea
                                     </h3>
                                     <span>
-                                        Rp.120.000
-                                    </span>
-                                </div>
-                                <div class="cart-btn">
-                                    <i class='bx bx-cart-alt'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="food-item dolor-type">
-                        <div class="item-wrap bottom-up play-on-scroll">
-                            <div class="item-img">
-                                <div class="img-holder bg-img"
-                                    style="background-image: url('assets/2.png');"></div>
-                            </div>
-                            <div class="item-info">
-                                <div>
-                                    <h3>
-                                        Matcha
-                                    </h3>
-                                    <span>
-                                        Rp.120.000
+                                        Rp5.000
                                     </span>
                                 </div>
                                 <div class="cart-btn">
@@ -461,8 +505,8 @@
                     <br>
                     <p>Pronojiwo Kabupaten Lumajang.</p>
                     <br>
-                    <p>Email: example@mail.com</p>
-                    <p>Nomor Telepom: +00 123 456 789</p>
+                    <p>Email: serrie_tea@mail.com</p>
+                    <p>Nomor Telepom: +6281230923553</p>
                     <p>Website: Serrietea.com</p>
                 </div>
                 <div class="col-2 col-xs-12">
